# education-platform

./: .env.example  .gitignore  Dockerfile  Dockerfile.base-python  Dockerfile.migrate  Jenkinsfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.cursor/plans/: education_platform_mvp_9f7933d0.plan.md
deploy/argocd/: root-app.yaml
deploy/argocd/applications/: education-platform.yaml  postgresql.yaml
deploy/charts/education-platform/: Chart.yaml  values.yaml
deploy/charts/postgresql/: Chart.yaml  values.yaml
docs/: curl-examples.md  diploma-memo.md  env.md  migrations.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/pages/: AdminUsersPage.tsx  AttemptResultPage.tsx  EmployeeHomePage.tsx  LoginPage.tsx  ManagerAssignTestPage.tsx  ManagerAttemptDetailPage.tsx  ManagerAttemptsPage.tsx  ManagerTestEditPage.tsx  ManagerTestsPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ReportPage.tsx  TakeTestPage.tsx  TestsPage.tsx
pkg/: __init__.py  app_factory.py  config.py  db.py  errors.py  health.py  http_client.py  internal_auth.py  jwt_auth.py  logger.py  metrics.py
pkg/tests/: test_internal_auth.py  test_jwt_auth.py
scripts/: generate_presentation.py  init-db.sql  reset_password.py  test_gigachat_connection.py
services/api_gateway/app/: config.py  main.py  proxy.py  routes.py
services/api_gateway/tests/: test_proxy_router.py
services/auth_service/: alembic.ini
services/auth_service/alembic/: env.py
services/auth_service/app/: config.py  deps.py  main.py  models.py  schemas.py
services/llm_service/: alembic.ini
services/llm_service/alembic/: env.py
services/llm_service/app/: config.py  deps.py  main.py  models.py  schemas.py  scoring.py
services/llm_service/tests/: test_mock_analyzer.py  test_prompt_builder.py
services/report_service/: alembic.ini
services/report_service/alembic/: env.py
services/report_service/app/: config.py  deps.py  main.py  models.py  schemas.py
services/test_service/: alembic.ini
services/test_service/alembic/: env.py
services/test_service/app/: config.py  deps.py  main.py  models.py  schemas.py
services/user_service/: alembic.ini
services/user_service/alembic/: env.py
(+53 files in other folders)
