[project]
name = "education-platform"
version = "0.1.0"
description = "Microservice training & testing platform with LLM-driven analysis"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "structlog>=24.4,<25.0",
    "httpx>=0.27,<0.28",
    "prometheus-client>=0.21,<0.22",
    "prometheus-fastapi-instrumentator>=7.0,<8.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.13,<2.0",
    "pyjwt>=2.9,<3.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "python-multipart>=0.0.12,<1.0",
    "email-validator>=2.2,<3.0",
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1,<4.0",
    "psycopg2-binary>=2.9,<3.0",
    "xhtml2pdf>=0.2.15,<0.3",
]

[project.optional-dependencies]
auth = []
user = []
test = []
llm = []
report = []
gateway = []
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2.0",
    "types-passlib",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkg", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services", "pkg"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = [".venv", "frontend", "deploy", "docs"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "B",               # bugbear
    "UP",              # pyupgrade
    "C4",              # comprehensions
    "SIM",             # simplify
    "ASYNC",           # async-specific
    "RUF",
]
ignore = ["B008"]     # FastAPI Depends in argument defaults is intentional

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "ruff==0.7.4",
]
